# human-bo

./: .gitignore  .prospector.yaml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
human_bo/: conf.py  core.py  factories.py  oracles.py  reporting.py  test_functions.py  user_models.py  utils.py  visualization.py
human_bo/joint_optimization/: human_suggests_second.py
results-zhou/: initial-test.sh  q-ucb-test-wandb.yaml  q-ucb-test.sh  wandb.yaml
scripts/: main.py  run_human_ai_experiment  run_human_ai_experiment.py  run_human_then_ai_experiment  run_human_then_ai_experiment.py  run_moo.py  static_analysis.sh  visualize.py  visualize_human_ai_experiment  visualize_human_ai_experiment.py  wandb_example_config.yaml
src/human_bo/: conf.py  core.py  factories.py  human_feedback_experiments.py  interaction_loops.py  reporting.py  test_functions.py  user_models.py  utils.py
src/human_bo/collaborative_optimization/: human_suggests_second.py
src/human_bo/joint_optimization/: human_suggests_second.py
src/human_bo/moo/: agents.py  moo_core.py  moo_experiment.py  moo_scratchpad.py
tests/: test_assert.py  test_core.py  test_test_functions.py  test_utils.py
wandb/: latest-run
